--- a/index.html
+++ b/index.html
@@ -3,18 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>see-my-script</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>Medhassu - Learn Development & Design</title>
+    <meta name="description" content="Your comprehensive learning platform for mastering development and design" />
+    <meta name="author" content="Medhassu" />
 
-    <meta property="og:title" content="see-my-script" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="Medhassu - Learn Development & Design" />
+    <meta property="og:description" content="Your comprehensive learning platform for mastering development and design" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
   </head>
 
   <body>
