--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Medhassu - Learn Development & Design</title>
     <meta name="description" content="Your comprehensive learning platform for mastering development and design" />
     <meta name="author" content="Medhassu" />
@@ -9,6 +10,8 @@
     <meta property="og:title" content="Medhassu - Learn Development & Design" />
     <meta property="og:description" content="Your comprehensive learning platform for mastering development and design" />
     <meta property="og:type" content="website" />
+
+    <meta name="twitter:card" content="summary_large_image" />
   </head>
 
   <body>
